--- a/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
+++ b/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
@@ -24,6 +24,7 @@
     android:layout_marginEnd="15dp"
     android:animateLayoutChanges="false"
     android:layout_marginBottom="15dp"
+    android:foreground="@drawable/ripple_light"
     android:background="@drawable/new_tab_set_default_browser_button_background"
     app:layout_constraintBottom_toBottomOf="parent"
     tools:showIn="@layout/fragment_browser_tab">
@@ -59,12 +60,12 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="14dp"
-        android:background="?attr/selectableItemBackground"
+        android:background="@drawable/ripple_light"
         android:contentDescription="@string/dismissDefaultBrowserInfo"
         android:elevation="7dp"
         android:scaleType="center"
-        android:tint="#646464"
         android:src="@drawable/ic_close_white_18dp"
+        android:tint="#646464"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
