Adding activity transition for call to action

--- a/app/src/main/res/layout-land/activity_default_browser_info.xml
+++ b/app/src/main/res/layout-land/activity_default_browser_info.xml
@@ -79,11 +79,12 @@
         android:id="@+id/defaultBrowserIllustration"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:elevation="6dp"
         android:importantForAccessibility="no"
         android:src="@drawable/icon_default_browser_illustration"
+        android:transitionName="defaultBrowserCallToActionTransition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textEndVerticalGuideline"
