Add correct menu reference for tools:menu link

--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -61,7 +61,7 @@
         android:animateLayoutChanges="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.duckduckgo.app.browser.BrowserActivity"
-        tools:menu="menu_browser_activity">
+        tools:menu="@menu/menu_browser_activity">
 
         <FrameLayout
             android:id="@+id/webViewContainer"
