--- a/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
+++ b/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
@@ -17,14 +17,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/homeScreenCallToActionContainer"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
-    android:animateLayoutChanges="false"
     android:background="@drawable/new_tab_set_default_browser_button_background"
     android:foreground="@drawable/ripple_light"
     android:minHeight="56dp"
+    android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +33,7 @@
     <LinearLayout
         android:id="@+id/buttonContents"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
         android:gravity="center"
