--- a/app/src/main/res/layout/include_new_browser_tab.xml
+++ b/app/src/main/res/layout/include_new_browser_tab.xml
@@ -20,6 +20,7 @@
     android:id="@+id/newTabLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
     android:animateLayoutChanges="true"
     tools:context="com.duckduckgo.app.browser.BrowserActivity"
     tools:menu="@menu/menu_browser_activity"
@@ -28,17 +29,16 @@
     <ImageView
         android:id="@+id/ddgLogo"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/duckDuckGoLogoDescription"
         android:src="@drawable/full_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/homeScreenCallToActionContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="180dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintWidth_max="180dp" />
 
-    <include layout="@layout/include_home_screen_default_browser_call_to_action" />
+    <include layout="@layout/include_home_screen_default_browser_call_to_action" android:id="@+id/homeScreenCallToActionContainer" />
 
 </android.support.constraint.ConstraintLayout>
