--- a/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
+++ b/app/src/main/res/layout/include_duckduckgo_browser_webview.xml
@@ -13,24 +13,30 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
-<com.duckduckgo.app.browser.DuckDuckGoWebView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.duckduckgo.app.browser.DuckDuckGoSwipeToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeToRefreshLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/browserWebView"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fadeScrollbars="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:scrollbarSize="4dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:scrollbarStyle="outsideInset"
-    android:scrollbarThumbHorizontal="@color/webViewScrollbarThumbColor"
-    android:scrollbarThumbVertical="@color/webViewScrollbarThumbColor"
-    android:scrollbarTrackHorizontal="@color/webViewScrollbarTrackColor"
-    android:scrollbarTrackVertical="@color/webViewScrollbarTrackColor"
-    android:visibility="gone"
-    tools:visibility="visible">
+    android:layout_height="match_parent">
 
-</com.duckduckgo.app.browser.DuckDuckGoWebView>
+    <com.duckduckgo.app.browser.DuckDuckGoWebView
+        android:id="@+id/browserWebView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fadeScrollbars="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollbarSize="4dp"
+        android:scrollbarStyle="outsideInset"
+        android:scrollbarThumbHorizontal="@color/webViewScrollbarThumbColor"
+        android:scrollbarThumbVertical="@color/webViewScrollbarThumbColor"
+        android:scrollbarTrackHorizontal="@color/webViewScrollbarTrackColor"
+        android:scrollbarTrackVertical="@color/webViewScrollbarTrackColor"
+        android:visibility="gone"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:visibility="visible">
+
+    </com.duckduckgo.app.browser.DuckDuckGoWebView>
+
+</com.duckduckgo.app.browser.DuckDuckGoSwipeToRefreshLayout>
