Wire in c2a experiment 2 variant

--- a/app/src/main/res/layout/include_new_browser_tab.xml
+++ b/app/src/main/res/layout/include_new_browser_tab.xml
@@ -32,13 +32,20 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/duckDuckGoLogoDescription"
         android:src="@drawable/full_logo"
-        app:layout_constraintBottom_toTopOf="@+id/homeScreenCallToActionContainer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/callToActionStub"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="180dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="180dp" />
 
-    <include layout="@layout/include_home_screen_default_browser_call_to_action" android:id="@+id/homeScreenCallToActionContainer" />
+    <ViewStub
+        android:id="@+id/callToActionStub"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
