--- a/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
+++ b/app/src/main/res/layout/include_home_screen_default_browser_call_to_action.xml
@@ -17,6 +17,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/homeScreenCallToActionContainer"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
@@ -24,6 +25,8 @@
     android:foreground="@drawable/ripple_light"
     android:minHeight="56dp"
     android:visibility="gone"
+    android:clickable="true"
+    android:focusable="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +37,8 @@
         android:id="@+id/buttonContents"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
+        android:layout_marginStart="18dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
