--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="warmerGray">#777777</color>
     <color name="subtleGray">#f0f0f0</color>
     <color name="subtleGrayTwo">#D8D8D8</color>
+    <color name="pinkishGrey">#CCCCCC</color>
 
     <color name="orange">#de5833</color>
     <color name="brickOrange">#d03a10</color>
