--- a/app/src/main/res/layout/content_privacy_dashboard.xml
+++ b/app/src/main/res/layout/content_privacy_dashboard.xml
@@ -46,7 +46,8 @@
             <LinearLayout
                 android:id="@+id/httpsContainer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:onClick="onEncryptionClicked">
 
                 <ImageView
                     android:id="@+id/httpsIcon"
@@ -144,6 +145,7 @@
             android:layout_height="108dp"
             android:paddingEnd="20dp"
             android:paddingStart="20dp"
+            android:onClick="onLeaderboardClick"
             app:layout_constraintTop_toBottomOf="@id/privacyToggleContainer">
 
             <TextView
