Update to target Android Pie 🥧 (#325)
* Update to target Android Pie; updated network config to allow cleartext

Apps targeting Android Pie have cleartext comms disabled by default. That doesn't really work for a browser. So we enable cleartext comms but disable cleartext comms for *duckduckgo.com sites to enforce secure comms with our server.

* Remove exception for duckduckgo.com traffic

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -22,4 +22,5 @@
             <certificates src="user" />
         </trust-anchors>
     </debug-overrides>
+    <base-config cleartextTrafficPermitted="true" />
 </network-security-config>
