Potential interim solution for clearing process on 🔥 button press

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,6 @@
     <color name="webViewScrollbarTrackColor">#FF333333</color>
     <color name="webViewScrollbarThumbColor">#FFABABAB</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
