--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -24,18 +24,40 @@
 
     <TextView
         android:id="@+id/clearAllOption"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:drawablePadding="24dp"
         android:drawableStart="@drawable/icon_fire_glyph_24dp"
         android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
+        android:paddingBottom="17dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingEnd="24dp"
+        android:paddingStart="24dp"
+        android:paddingTop="24dp"
+        android:text="kill process (splash screen impl)"
+        android:textColor="@color/brickOrange"
+        android:textSize="16sp"
+        android:textStyle="normal" />
+
+    <TextView
+        android:id="@+id/clearAllOptionNewActivity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:drawablePadding="24dp"
+        android:drawableStart="@drawable/icon_fire_glyph_24dp"
+        android:fontFamily="sans-serif"
+        app:layout_constraintTop_toBottomOf="@id/clearAllOption"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:paddingBottom="17dp"
         android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:paddingTop="24dp"
-        android:text="@string/fireClearAll"
+        android:text="kill process (new activity impl)"
         android:textColor="@color/brickOrange"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -43,22 +65,23 @@
     <!-- Drawable tint does not work on API 21 so we have to use a pre-colored drawable -->
     <TextView
         android:id="@+id/cancelOption"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:drawablePadding="24dp"
         android:drawableStart="@drawable/ic_clear_browsnish_24px"
         android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
         android:paddingBottom="24dp"
         android:paddingEnd="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:paddingStart="24dp"
         android:paddingTop="17dp"
         android:text="@string/fireCancel"
         android:textColor="@color/brownishGray"
+        app:layout_constraintTop_toBottomOf="@id/clearAllOptionNewActivity"
         android:textSize="16sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/clearAllOption"
         tools:ignore="UnusedAttribute" />
 
 </android.support.constraint.ConstraintLayout>
