--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -266,4 +266,9 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/fire_splash_activity</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
 </resources>
