animate tabs button

--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -29,7 +29,9 @@
         android:id="@+id/tabs"
         android:icon="@drawable/ic_tabs_gray_24dp"
         android:title="@string/tabsMenuItem"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        app:actionViewClass="com.duckduckgo.app.browser.TabSwitcherButton"
+        />
 
     <item
         android:id="@+id/browserPopup"
