update tabswitcher to show higlighted tab

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="powderBlue2">#B2D6F3</color>
     <color name="denimBlue">#3d5599</color>
     <color name="cornflowerBlue">#678FFF</color>
+    <color name="skyBlue">#42bffe</color>
 
     <color name="lightOliveGreen">#93c04d</color>
     <color name="muddyGreen">#58732e</color>
