--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     app:layout_scrollFlags="scroll|enterAlways"
     tools:context="com.duckduckgo.app.browser.BrowserActivity"
-    tools:menu="menu_browser_activity">
+    tools:menu="@menu/menu_browser_activity">
 
 
     <android.support.constraint.ConstraintLayout
