--- a/app/src/main/res/drawable/ic_fire_gray_24dp.xml
+++ b/app/src/main/res/drawable/ic_fire_gray_24dp.xml
@@ -1,25 +1,10 @@
-<!--
-  ~ Copyright (c) 2018 DuckDuckGo
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
+    android:width="19dp"
     android:height="24dp"
-    android:viewportWidth="24"
+    android:viewportWidth="19"
     android:viewportHeight="24">
   <path
-      android:pathData="M9.573,23.744c-1.26,-0.74 -2.16,-2.044 -2.213,-3.578 -0.078,-2.862 1.93,-4.267 3.114,-6.184 1.7,-2.76 1.236,-4.472 1.236,-4.472s1.415,0.793 2.239,3.732c0.257,0.868 0.308,1.738 0.23,2.555 -0.128,2.07 -1.029,3.935 -1.029,3.935s1.57,-0.332 2.008,-3.168c0.72,0.74 1.39,1.815 1.467,2.939 0.129,1.941 -1.03,3.73 -2.78,4.497 3.037,-0.69 5.199,-3.245 5.946,-5.111 0.952,-2.351 0.694,-4.446 0.54,-6.261 -0.206,-2.479 0.669,-4.319 0.669,-4.319s-1.673,0.485 -2.908,2.505c-0.566,0.92 -0.799,2.274 -0.799,2.274s0.13,-1.2 -0.67,-3.4c-0.797,-2.145 -1.517,-2.912 -1.956,-4.497 -0.565,-2.12 0.697,-4.191 0.697,-4.191s-4.993,0.92 -7.258,5.239c-2.008,3.833 -1.184,6.133 -1.184,6.133s-0.85,-0.793 -1.287,-1.89c-0.437,-1.1 -0.335,-2.096 -0.335,-2.096s-3.552,3.885 -1.828,8.766c1.16,3.424 3.4,5.672 6.101,6.592z"
+      android:pathData="M6.939,23.733c-2.853,-0.96 -5.217,-3.306 -6.44,-6.879 -1.82,-5.093 1.929,-9.147 1.929,-9.147s-0.108,1.04 0.353,2.187c0.462,1.145 1.358,1.973 1.358,1.973s-0.869,-2.4 1.25,-6.4C7.78,0.96 13.051,0 13.051,0s-1.332,2.16 -0.735,4.373c0.462,1.654 1.222,2.454 2.065,4.694 0.842,2.294 0.707,3.547 0.707,3.547s0.245,-1.413 0.842,-2.373C17.234,8.133 19,7.627 19,7.627s-0.923,1.92 -0.706,4.506c0.163,1.894 0.434,4.08 -0.57,6.534 -0.79,1.947 -3.07,4.613 -6.276,5.333 1.847,-0.8 3.07,-2.667 2.934,-4.693 -0.082,-1.173 -0.788,-2.294 -1.548,-3.066 -0.462,2.959 -2.12,3.306 -2.12,3.306s0.951,-1.946 1.087,-4.106a6.947,6.947 0,0 0,-0.244 -2.667c-0.87,-3.067 -2.363,-3.894 -2.363,-3.894s0.489,1.786 -1.305,4.667c-1.25,2 -3.369,3.466 -3.287,6.453 0.055,1.6 1.006,2.96 2.337,3.733z"
       android:fillColor="#AAA"
       android:fillType="evenOdd"/>
 </vector>
