--- a/app/src/main/res/layout/sheet_fire_clear_data.xml
+++ b/app/src/main/res/layout/sheet_fire_clear_data.xml
@@ -27,20 +27,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:drawablePadding="24dp"
         android:drawableStart="@drawable/icon_fire_glyph_24dp"
+        android:drawablePadding="24dp"
         android:fontFamily="sans-serif"
-        android:paddingBottom="17dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:paddingTop="24dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="17dp"
         android:text="@string/fireClearAll"
         android:textColor="@color/brickOrange"
         android:textSize="16sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Drawable tint does not work on API 21 so we have to use a pre-colored drawable -->
     <TextView
@@ -48,20 +48,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:drawablePadding="24dp"
         android:drawableStart="@drawable/ic_clear_browsnish_24px"
+        android:drawablePadding="24dp"
         android:fontFamily="sans-serif"
-        android:paddingBottom="24dp"
-        android:paddingEnd="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:paddingStart="24dp"
         android:paddingTop="17dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="24dp"
         android:text="@string/fireCancel"
         android:textColor="@color/brownishGray"
-        app:layout_constraintTop_toBottomOf="@id/clearAllOption"
         android:textSize="16sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clearAllOption"
         tools:ignore="UnusedAttribute" />
 
 </android.support.constraint.ConstraintLayout>
